<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="30sp"/>

    <Button 
        android:id="@+id/add_chef_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/add_chef_string"
        android:textSize="20sp"
        android:onClick="addChef"/>
    
    <Button 
        android:id="@+id/add_meal_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/add_meal_string"
        android:textSize="20sp"
        android:onClick="addMeal"/>
    
    <Button 
        android:id="@+id/chef_list_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/chef_list_string"
        android:textSize="20sp"
        android:onClick="showChefList"/>
    
    <Button 
        android:id="@+id/meal_list_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/meal_list_string"
        android:textSize="20sp"
        android:onClick="showMealList"/>
    

</LinearLayout>
